--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py32, py33, py34, pypy
+envlist = py26, py27, py27gevent, py32, py33, py34, pypy
 
 [testenv]
 deps= -r{toxinidir}/dev-requirements.txt
@@ -8,3 +8,11 @@ commands=
    []
 setenv =
     PYTHONWARNINGS=always::DeprecationWarning
+
+[testenv:py27gevent]
+basepython=python2.7
+deps= 
+    -r{toxinidir}/dev-requirements.txt
+    gevent
+setenv=
+    USE_GEVENT=1
